2010-01-16  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Remove unused --icon-type arg.
	Handle --display arg, passing it to command-line-1 (Bug#5392).

2010-01-16  Mario Lang  <mlang@delysid.org>

	* cedet/ede/cpp-root.el (ede-cpp-root-project):
	* cedet/ede/files.el (ede-expand-filename):
	* cedet/ede/simple.el (ede-simple-project):
	* cedet/semantic/complete.el (semantic-complete-read-tag-engine)
	(semantic-complete-inline-tag-engine):
	* cedet/semantic/db-el.el (semanticdb-equivalent-mode):
	* cedet/semantic/db-global.el (semanticdb-equivalent-mode):
	* cedet/semantic/db-javascript.el (semanticdb-equivalent-mode):
	* cedet/semantic/db.el (semanticdb-equivalent-mode):
	* cedet/semantic/decorate/include.el (semantic-decoration-unknown-include-describe):
	* cedet/semantic/idle.el (semantic-idle-work-for-one-buffer):
	* emacs-lisp/chart.el (chart-translate-namezone):
	* textmodes/artist.el (artist-compute-popup-menu-table):
	Remove duplicated words in doc-strings.

2010-01-15   David Abrahams  <dave@boostpro.com>  (tiny change)

	* net/mairix.el (mairix-widget-send-query): Send -1 instead of nil
	to mairix-search to suppress threading (Bug#5342).

2010-01-15  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (canonicalize-coding-system-name):
	Convert "msXXX", "ibmXXX", "windows-XXX" to "cpXXX".

2010-01-15  Glenn Morris  <rgm@gnu.org>

	* log-view.el (top-level): Require 'wid-edit.  (Bug#5311)

	* wid-edit.el (widget-keymap): Doc fix.

	* vc-svn.el (vc-svn-print-log): Use --limit rather than -l since the
	former seems to be more widely accepted by various svn versions.

2010-01-14  Juanma Barranquero  <lekktu@gmail.com>

	* find-cmd.el (find-constituents):
	* vc-arch.el (vc-arch-root):
	* window.el (window-body-height, pop-up-frames):
	* cedet/semantic/edit.el (semantic-reparse-needed-change-hook)
	(semantic-no-reparse-needed-change-hook):
	* cedet/srecode/insert.el (srecode-resolve-argument-list)